--- a/WallpaperChangerBackground/WallpaperChangerBackground.csproj
+++ b/WallpaperChangerBackground/WallpaperChangerBackground.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Nancy" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
